# wrdz

./: README.md  pyproject.toml
.github/workflows/: pytest.yml
scripts/: benchmark_english.py  benchmark_urls.py  build_dicts.py
src/wrdz/: __init__.py
src/wrdz/dicts/: en_US.dict  urls.dict
tests/: english.txt  test_train.py  test_wrdz.py  urls.txt
